--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MUJI 온라인스토어</title>
+  <meta name="description" content="Portfolio for world-renowed software engineer Seo">
+  <meta name="author" content="Seo">
+  <link rel="icon" type="image/png" href="imgs/logo_a.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
