HTML: Left Menu

--- a/index.html
+++ b/index.html
@@ -43,5 +43,36 @@
     <li class="navber__middle__item">생활잡화 아울렛</li>
   </ul>
 </div>
+<!-- Left Menu -->
+<div class="menu__first">
+  <h3>의복/신발/패션잡화</h3>
+  <ul>
+    <li class="menu__1">MUJI LABO</li>
+    <li class="menu__1">남성복</li>
+    <li class="menu__1">여성복</li>
+    <li class="menu__1">아동복·마터니티</li>
+    <li class="menu__1">이너웨어</li>
+    <li class="menu__1">가방·신발</li>
+    <li class="menu__1">액세서리·양말·우산</li>
+  </ul>
+</div>
+<div class="menu__second">
+  <h3>생활잡화</h3>
+  <ul>
+    <li class="menu__2">패브릭</li>
+    <li class="menu__2">가구·인테리어</li>
+    <li class="menu__2">주방·생활용품</li>
+    <li class="menu__2">헬스&뷰티·아로마</li>
+    <li class="menu__2">화장품</li>
+    <li class="menu__2">전자제품·기프트</li>
+    <li class="menu__2">문구</li>
+  </ul>
+</div>
+<div class="menu__third">
+  <h3>식품</h3>
+  <ul>
+    <li class="menu__3">과자·음료·소스</li>
+  </ul>
+</div>
 </body>
 </html>
