--- a/index.html
+++ b/index.html
@@ -15,64 +15,46 @@
   <script src="main.js" defer></script>
 </head>
 <body>
-<!-- Top Message -->
-<a href="" class="top__message">
-  <h2>온라인스토어 한정 의복, 생활잡화 대상 3만원 이상 구입시 무료배송</h2>
-</a>
-<!-- Navbar Top-->
-<div class="navbar__top">
-  <a href="" class="navbar__top__logo">
-    <img src="imgs/logo_muji.png" alt="logo_muji">
+<!-- header -->
+<header class="header">
+  <!-- Message Top -->
+  <a href="" class="top__message">
+    <h2>온라인스토어 한정 의복, 생활잡화 대상 3만원 이상 구입시 무료배송</h2>
   </a>
-  <ul>
-    <li class="navbar__top__item">검색</li>
-    <li class="navbar__top__item">로그인</li>
-    <li class="navbar__top__item">주문배송</li>
-    <li class="navbar__top__item">장바구니</li>
-  </ul>
-</div>
-<!-- Navbar Middle -->
-<div class="navbar__middle">
-  <ul>
-    <li class="navber__middle__item">인기상품</li>
-    <li class="navber__middle__item">신상품</li>
-    <li class="navber__middle__item">온라인 한정사이즈</li>
-    <li class="navber__middle__item">가격 인하</li>
-    <li class="navber__middle__item">기간 한정</li>
-    <li class="navber__middle__item">의복 잡화 아울렛</li>
-    <li class="navber__middle__item">생활잡화 아울렛</li>
-  </ul>
-</div>
-<!-- Left Menu -->
-<div class="menu__first">
-  <h3>의복/신발/패션잡화</h3>
-  <ul>
-    <li class="menu__1">MUJI LABO</li>
-    <li class="menu__1">남성복</li>
-    <li class="menu__1">여성복</li>
-    <li class="menu__1">아동복·마터니티</li>
-    <li class="menu__1">이너웨어</li>
-    <li class="menu__1">가방·신발</li>
-    <li class="menu__1">액세서리·양말·우산</li>
-  </ul>
-</div>
-<div class="menu__second">
-  <h3>생활잡화</h3>
-  <ul>
-    <li class="menu__2">패브릭</li>
-    <li class="menu__2">가구·인테리어</li>
-    <li class="menu__2">주방·생활용품</li>
-    <li class="menu__2">헬스&뷰티·아로마</li>
-    <li class="menu__2">화장품</li>
-    <li class="menu__2">전자제품·기프트</li>
-    <li class="menu__2">문구</li>
-  </ul>
-</div>
-<div class="menu__third">
-  <h3>식품</h3>
-  <ul>
-    <li class="menu__3">과자·음료·소스</li>
-  </ul>
-</div>
+  <!-- Navbar Top-->
+  <div class="header__top">
+    <div class="inner">
+      <div class="left__area">
+        <a href="" class="left__area__logo">
+          <img src="imgs/logo_muji.png" alt="logo_muji">
+        </a>
+      </div>
+      <div class="center__area">
+        <h3>검색 공간 넣기</h3>
+      </div>
+      <div class="right__area">
+        <ul>
+          <li class="right__area__menu" title="로그인">로그인</li>
+          <li class="right__area__menu" title="주문배송">주문배송</li>
+          <li class="right__area__menu" title="장바구니">장바구니</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- Top Navbar -->
+  <div class="top__nav">
+    <div class="inner">
+      <ul>
+        <li class="top__nav__item">인기상품</li>
+        <li class="top__nav__item">신상품</li>
+        <li class="top__nav__item">온라인 한정사이즈</li>
+        <li class="top__nav__item">가격 인하</li>
+        <li class="top__nav__item">기간 한정</li>
+        <li class="top__nav__item">의복 잡화 아울렛</li>
+        <li class="top__nav__item">생활잡화 아울렛</li>
+      </ul>
+    </div>
+  </div>
+</header>
 </body>
 </html>
