HTML: search bar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </a>
           </div>
           <div class="center__area">
-            <h3>검색 공간 넣기</h3>
+            <div class="search__bar">
+              <input type="search" id="iSearchWord" name="searchWord" class="search__bar__word" title="검색어 입력">
+            </div>
           </div>
           <div class="right__area">
             <div>
