HTML: top notice

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
     <!-- Main -->
     <div class="content__inner">
-      <!-- Side nav -->
+      <!-- Side nav start -->
       <aside class="side__menu">
         <div class="side__menu__category">
           <h2 class="side__menu__heading">의복/신발/패션잡화</h2>
@@ -564,6 +564,40 @@
           </div>
         </div>
       </aside>
+      <!-- Side nav end -->
+      <!-- Main content start -->
+      <main class="main__content__new">
+        <!-- Top notice start -->
+        <div class="panel">
+          <section class="main__notice">
+            <div class="main__notice__wrap">
+              <div class="left">[공지사항]</div>
+              <div class="right">
+                <ul class="note__wrap">
+                  <li class="not__dot">
+                    <a href="" class="row">
+                      <span class="text">[공지사항] 구매회원 이용약관 개정 안내_시행일: 2022.04.01</span>
+                      <span class="date">2022.02.23</span>
+                    </a>
+                  </li>
+                  <li class="not__dot">
+                    <a href="" class="row">
+                      <span class="text">[공지사항] 개인정보처리방침 개정 안내_시행일:2022.01.12</span>
+                      <span class="date">2022.01.07</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </div>
+        <!-- Top banner start -->
+        <section class="main__visual">
+          <div class="slider__container">
+
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
