--- a/index.html
+++ b/index.html
@@ -34,28 +34,22 @@
       <!-- Navbar Top-->
       <div class="header__top">
         <div class="inner">
-          <div class="left__area">
-            <a href="" class="left__area__logo">
+          <a href="" class="left__area__logo">
               <img src="imgs/logo_muji.png" alt="logo_muji" />
-            </a>
+          </a>
+          <div class="search__bar">
+            <input type="search" id="iSearchWord" name="searchWord" class="search__bar__word" title="검색어 입력">
+            <input class="search__bar__btn"type="submit" />
           </div>
-          <div class="center__area">
-            <div class="search__bar">
-              <input type="search" id="iSearchWord" name="searchWord" class="search__bar__word" title="검색어 입력">
-            </div>
-          </div>
-          <div class="right__area">
-            <div>
-              <a href="" class="right__area__menu" title="로그인">로그인 </a>
-              <a href="" class="right__area__menu" title="주문배송">주문배송</a>
-              <a href="" class="right__area__menu" title="장바구니">장바구니</a>
-            </div>
+          <div>
+            <a href="" class="right__area__menu" title="로그인">로그인 </a>
+            <a href="" class="right__area__menu" title="주문배송">주문배송</a>
+            <a href="" class="right__area__menu" title="장바구니">장바구니</a>
           </div>
         </div>
       </div>
       <!-- Top Navbar -->
-      <div class="top__nav">
-        <div class="inner">
+        <nav id="top__nav">
           <ul>
             <li class="top__nav__item">인기상품</li>
             <li class="top__nav__item">신상품</li>
@@ -64,9 +58,8 @@
             <li class="top__nav__item">기간 한정</li>
             <li class="top__nav__item">의복 잡화 아울렛</li>
             <li class="top__nav__item">생활잡화 아울렛</li>
-          </ul>
-        </div>
-      </div>
+          </ul>    
+        </nav>
     </header>
     <!-- Main -->
     <div class="content__inner">
